--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,113 @@
-.container.global {
-    margin-top: 10px;
+* {
+    box-sizing: border-box;
+}
+
+body {
+    line-height: 1.7em;
+    color: #7f8c8d;
+    font-size: 14px;
+}
+
+.pure-menu.pure-menu-fixed {
+    /* Fixed menus normally have a border at the bottom. */
+    border-bottom: none;
+    /* I need a higher z-index here because of the scroll-over effect. */
+    z-index: 4;
+}
+
+.hj-menu {
+    background: #2d3e50;
+    padding: 0.5em;
+    box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
+}
+
+.hj-menu .pure-menu-heading {
+    color: white;
+    font-weight: 400;
+    font-size: 120%;
+}
+
+.hj-menu a {
+    color: white;
+}
+
+.hj-menu ul {
+    float: right
+}
+
+/*
+ * -- CONTENT STYLES --
+ * This represents the content area (everything below the blue section)
+ */
+
+.content-wrapper {
+    /* These styles are required for the "scroll-over" effect */
+    position: absolute;
+    top: 100px;
+    width: 100%;
+    min-height: 12%;
+    z-index: 2;
+    background: white;
+}
+
+.content {
+    padding: 1em;
+}
+
+/* This is the class used for the main content headers (<h2>) */
+.content-head {
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    margin: 2em 0 1em;
+}
+
+.is-center {
+    text-align: center;
+}
+
+form {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 768px;
+}
+
+.error-field {
+    visibility: hidden;
+    font-size: 0.8em;
+    color: rgb(223, 117, 20);
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 0.8em;
+}
+
+.error-field.error {
+    visibility: visible;
+}
+
+.center-content {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 768px;
+}
+
+.collection {
+    margin: 0.5rem 0 1rem 0;
+    border: 1px solid #e0e0e0;
+    overflow: hidden;
+    position: relative;
+}
+
+.collection .collection-item {
+    line-height: 1.5rem;
+    padding: 10px 20px;
+    border-bottom: 1px solid #e0e0e0;
+}
+
+.collection .collection-item:last-child {
+    border-bottom: none;
+}
+ul {
+    padding: 0;
+    list-style-type: none;
 }
