--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,7 +3,17 @@
 }
 
 body {
-    line-height: 1.7em;
-    color: #7f8c8d;
-    font-size: 14px;
+    font-family: 'Open Sans', sans-serif;
+}
+
+.pure-g [class*="pure-u"] {
+    font-family: 'Open Sans', sans-serif;
+}
+
+.pure-form select {
+    height: inherit;
+}
+
+form.pure-form-stacked button {
+    margin-top: 1rem;
 }
