--- a/public/css/hj.css
+++ b/public/css/hj.css
@@ -1,3 +1,10 @@
+body {
+    line-height: 1.7em;
+    color: #7f8c8d;
+    font-size: 14px;
+
+}
+
 .pure-menu.pure-menu-fixed {
     /* Fixed menus normally have a border at the bottom. */
     border-bottom: none;
@@ -14,7 +21,8 @@
 .hj-menu .pure-menu-heading {
     color: white;
     font-weight: 400;
-    font-size: 120%;
+    font-size: 200%;
+    float: left;
 }
 
 .hj-menu a {
@@ -32,7 +40,7 @@
 
 .content-wrapper {
     position: absolute;
-    top: 100px;
+    top: 90px;
     width: 100%;
     min-height: 12%;
     z-index: 2;
@@ -73,6 +81,13 @@ form {
     visibility: visible;
 }
 
+.message {
+    background-color: #fff176;
+    border: 1px solid #e0e0e0;
+    padding: 0.2rem 0.5rem;
+    margin: 0.2rem;
+    border-radius: 5px;
+}
 .center-content {
     margin-left: auto;
     margin-right: auto;
@@ -92,10 +107,22 @@ form {
     border-bottom: 1px solid #e0e0e0;
 }
 
+.collection-item div:first-child {
+    padding-top: 5px;
+}
+
+.collection-item .play {
+    float: right;
+}
+
 .collection .collection-item:last-child {
     border-bottom: none;
 }
 ul {
     padding: 0;
     list-style-type: none;
+}
+
+legend {
+    font-size: 1.5em;
 }
