--- a/public/css/app.css
+++ b/public/css/app.css
@@ -17,3 +17,16 @@ body {
 form.pure-form-stacked button {
     margin-top: 1rem;
 }
+
+.error-field {
+    visibility: hidden;
+    font-size: 0.8em;
+    color: rgb(223, 117, 20);
+    margin-top: 0;
+    margin-bottom: 0;
+    line-height: 0.8em;
+}
+
+.error-field.error {
+    visibility: visible;
+}
