--- a/public/css/ej.css
+++ b/public/css/ej.css
@@ -18,6 +18,7 @@ header {
     background: url('../images/dark_wood.png');
     padding: 1rem;
     box-shadow: 0 12px 15px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+    line-height: 2.5rem;
 }
 
 header a {
@@ -30,7 +31,7 @@ header a {
     background: url('../images/dark_wood.png');
     padding: 1rem;
     padding-bottom: 2rem;
-    text-align: right;
+    text-align: center;
     border-radius: 0 0 0 15px;
     box-shadow: 0 12px 15px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
     position: relative;
