--- a/resources/assets/sass/ej.scss
+++ b/resources/assets/sass/ej.scss
@@ -61,6 +61,7 @@ header {
   box-shadow: 0 12px 15px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
   position: relative;
   min-height: 500px;
+  overflow: hidden;
 
   .perso .name{
     font-family: 'Satisfy', cursive;
