--- a/resources/assets/sass/hj.scss
+++ b/resources/assets/sass/hj.scss
@@ -2,7 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
 // Variables
-@import "variables";
+@import "variables_hj";
 
 // Purecss
 @import "node_modules/purecss/build/pure";
