--- a/resources/assets/sass/ej.scss
+++ b/resources/assets/sass/ej.scss
@@ -15,7 +15,7 @@ html {
 
 @media screen and (max-width: 568px) {
   html {
-    font-size: 13px;
+    font-size: 12px;
   }
 }
 
@@ -149,10 +149,30 @@ header {
       margin-bottom: 1rem;
     }
 
+    .sous-entete {
+      font-family: $font-family-1;
+      font-size: 1.2rem;
+      line-height: 1.2rem;
+      padding-bottom: 0.5rem;
+      margin-bottom: 0.5rem;
+      text-align: right;
+      font-style: italic;
+      display: inline-block;
+      float: right;
+      border-bottom: 1px solid black;
+
+      .perso {
+        font-family: $font-family-2;
+        font-size: 1.4rem;
+        font-style: normal;
+      }
+    }
+
     .contenu {
       font-family: $font-family-1;
-      font-size: 1.2em;
+      font-size: 1.2rem;
       line-height: 1.8rem;
+      clear: right;
     }
 
     input, textarea {
